<resources>
    <string name="title_manage_public_keys">Contacts</string>
    <string name="title_manage_secret_keys">Secret Keys</string>
    <string name="title_select_recipients">Select Public Key</string>
    <string name="title_select_secret_key">Select Secret Key</string>
    <string name="title_encrypt">Encrypt</string>
    <string name="title_decrypt">Decrypt</string>
    <string name="title_authentication">Passphrase</string>
    <string name="title_create_key">Create Key</string>
    <string name="title_edit_key">Edit Key</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_api_registered_apps">Registered Applications</string>
    <string name="title_key_server_preference">Key Server Preference</string>
    <string name="title_change_pass_phrase">Change Passphrase</string>
    <string name="title_set_passphrase">Set Passphrase</string>
    <string name="title_send_email">"Send Mail…"</string>
    <string name="title_encrypt_to_file">Encrypt To File</string>
    <string name="title_decrypt_to_file">Decrypt To File</string>
    <string name="title_import_keys">Import Keys</string>
    <string name="title_export_key">Export Key</string>
    <string name="title_export_keys">Export Keys</string>
    <string name="title_key_not_found">Key Not Found</string>
    <string name="title_key_server_query">Query Key Server</string>
    <string name="title_send_key">Upload to Key Server</string>
    <string name="title_unknown_signature_key">Unknown Signature Key</string>
    <string name="title_sign_key">Sign Key</string>
    <string name="title_key_details">Key Details</string>
    <string name="title_help">Help</string>
    <string name="title_share_by_nfc">Share key with NFC</string>
    <string name="section_user_ids">User IDs</string>
    <string name="section_keys">Keys</string>
    <string name="section_general">General</string>
    <string name="section_defaults">Defaults</string>
    <string name="section_advanced">Advanced</string>
    <string name="section_master_key">Master Key</string>
    <string name="section_master_user_id">Master User ID</string>
    <string name="section_actions">Actions</string>
    <string name="section_signing_key">Your Key used for Signing</string>
    <string name="section_upload_key">Upload Key</string>
    <string name="section_key_server">Key Server</string>
    <string name="btn_sign_to_clipboard">Sign (Clipboard)</string>
    <string name="btn_encrypt_to_clipboard">Encrypt to Clipboard</string>
    <string name="btn_encrypt_and_send">Encrypt and send…</string>
    <string name="btn_sign_and_send">Sign and send…</string>
    <string name="btn_sign">Sign</string>
    <string name="btn_decrypt">Decrypt</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_select_encrypt_keys">Select Recipients</string>
    <string name="btn_encrypt_file">Encrypt File</string>
    <string name="btn_save">Save</string>
    <string name="btn_do_not_save">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_no_date">None</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_change_passphrase">Change Passphrase</string>
    <string name="btn_set_passphrase">Set Passphrase</string>
    <string name="btn_search">Search</string>
    <string name="btn_export_to_server">Upload To Key Server</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_api_app_settings">Registered Apps</string>
    <string name="menu_import_from_file">Import from file</string>
    <string name="menu_import_from_qr_code">Import from QR Code</string>
    <string name="menu_import">Import</string>
    <string name="menu_import_from_nfc">Import from NFC</string>
    <string name="menu_export_keys">Export all keys</string>
    <string name="menu_export_key">Export to file</string>
    <string name="menu_delete_key">Delete key</string>
    <string name="menu_create_key">Create key</string>
    <string name="menu_create_key_expert">Create key (expert)</string>
    <string name="menu_edit_key">Edit key</string>
    <string name="menu_search">Search</string>
    <string name="menu_key_server">Import from key server</string>
    <string name="menu_update_key">Update from key server</string>
    <string name="menu_export_key_to_server">Upload to key server</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_title_fingerprint">Share fingerprint…</string>
    <string name="menu_share_title">Share whole key…</string>
    <string name="menu_share_default_fingerprint">with…</string>
    <string name="menu_share_default">with…</string>
    <string name="menu_share_qr_code">with QR Code</string>
    <string name="menu_share_qr_code_fingerprint">with QR Code</string>
    <string name="menu_share_nfc">with NFC</string>
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_sign_key">Sign key</string>
    <string name="menu_beam_preferences">Beam settings</string>
    <string name="menu_key_edit_cancel">Cancel</string>
    <string name="menu_encrypt_to">Encrypt to…</string>
    <string name="label_sign">Sign</string>
    <string name="label_message">Message</string>
    <string name="label_file">File</string>
    <string name="label_no_passphrase">No Passphrase</string>
    <string name="label_passphrase">Passphrase</string>
    <string name="label_passphrase_again">Again</string>
    <string name="label_algorithm">Algorithm</string>
    <string name="label_ascii_armor">ASCII Armor</string>
    <string name="label_select_public_keys">Public Keys</string>
    <string name="label_delete_after_encryption">Delete After Encryption</string>
    <string name="label_delete_after_decryption">Delete After Decryption</string>
    <string name="label_encryption_algorithm">Encryption Algorithm</string>
    <string name="label_hash_algorithm">Hash Algorithm</string>
    <string name="label_asymmetric">Public Key</string>
    <string name="label_symmetric">Passphrase</string>
    <string name="label_passphrase_cache_ttl">Passphrase Cache</string>
    <string name="label_message_compression">Message Compression</string>
    <string name="label_file_compression">File Compression</string>
    <string name="label_force_v3_signature">Force V3 Signatures</string>
    <string name="label_key_servers">Key Servers</string>
    <string name="label_key_id">Key ID</string>
    <string name="label_creation">Creation</string>
    <string name="label_expiry">Expiry</string>
    <string name="label_usage">Usage</string>
    <string name="label_key_size">Key Size</string>
    <string name="label_main_user_id">Main User ID</string>
    <string name="label_name">Name</string>
    <string name="label_comment">Comment</string>
    <string name="label_email">Email</string>
    <string name="label_send_key">Upload key to selected key server after signing</string>
    <string name="label_fingerprint">Fingerprint</string>
    <string name="select_keys_button_default">Select</string>
    <plurals name="select_keys_button">
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="unknown_user_id">&lt;unknown&gt;</string>
    <string name="none">&lt;none&gt;</string>
    <string name="no_key">&lt;no key&gt;</string>
    <string name="unknown_status"></string>
    <string name="can_encrypt">can encrypt</string>
    <string name="can_sign">can sign</string>
    <string name="expired">expired</string>
    <plurals name="n_key_servers">
        <item quantity="one">%d key server</item>
        <item quantity="other">%d key servers</item>
    </plurals>
    <string name="fingerprint">Fingerprint:</string>
    <string name="secret_key">Secret Key:</string>
    <string name="notValid">not valid</string>
    <string name="choice_none">None</string>
    <string name="choice_sign_only">Sign only</string>
    <string name="choice_encrypt_only">Encrypt only</string>
    <string name="choice_sign_and_encrypt">Sign and Encrypt</string>
    <string name="choice_15secs">15 secs</string>
    <string name="choice_1min">1 min</string>
    <string name="choice_3mins">3 mins</string>
    <string name="choice_5mins">5 mins</string>
    <string name="choice_10mins">10 mins</string>
    <string name="choice_20mins">20 mins</string>
    <string name="choice_40mins">40 mins</string>
    <string name="choice_1hour">1 hour</string>
    <string name="choice_2hours">2 hours</string>
    <string name="choice_4hours">4 hours</string>
    <string name="choice_8hours">8 hours</string>
    <string name="dsa">DSA</string>
    <string name="elgamal">ElGamal</string>
    <string name="rsa">RSA</string>
    <string name="filemanager_title_open">Open…</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="error_message">Error: %s</string>
    <string name="wrong_passphrase">Wrong passphrase.</string>
    <string name="using_clipboard_content">Using clipboard content.</string>
    <string name="set_a_passphrase">Set a passphrase first.</string>
    <string name="no_filemanager_installed">No compatible file manager installed.</string>
    <string name="passphrases_do_not_match">The passphrases didn\'t match.</string>
    <string name="passphrase_must_not_be_empty">Empty passphrases are not allowed.</string>
    <string name="passphrase_for_symmetric_encryption">Symmetric encryption.</string>
    <string name="passphrase_for">Enter passphrase for \'%s\'</string>
    <string name="file_delete_confirmation">Are you sure you want to delete\n%s?</string>
    <string name="file_delete_successful">Successfully deleted.</string>
    <string name="no_file_selected">Select a file first.</string>
    <string name="decryption_successful">Successfully decrypted.</string>
    <string name="encryption_successful">Successfully encrypted.</string>
    <string name="encryption_to_clipboard_successful">Successfully encrypted to clipboard.</string>
    <string name="enter_passphrase_twice">Enter the passphrase twice.</string>
    <string name="select_encryption_key">Select at least one encryption key.</string>
    <string name="select_encryption_or_signature_key">Select at least one encryption key or a signature key.</string>
    <string name="specify_file_to_encrypt_to">Please specify which file to encrypt to.\nWARNING: File will be overwritten if it exists.</string>
    <string name="specify_file_to_decrypt_to">Please specify which file to decrypt to.\nWARNING: File will be overwritten if it exists.</string>
    <string name="specify_file_to_export_to">Please specify which file to export to.\nWARNING: File will be overwritten if it exists.</string>
    <string name="specify_file_to_export_secret_keys_to">Please specify which file to export to.\nWARNING: You are about to export SECRET keys.\nWARNING: File will be overwritten if it exists.</string>
    <string name="key_deletion_confirmation">Do you really want to delete the key \'%s\'?\nYou can\'t undo this!</string>
    <string name="key_deletion_confirmation_multi">Do you really want to delete all selected keys?\nYou can\'t undo this!</string>
    <string name="key_creation_el_gamal_info">Note: only subkeys support ElGamal, and for ElGamal the nearest keysize of 1536, 2048, 3072, 4096, or 8192 will be used.</string>
    <string name="dashboard_manage_keys">Contacts</string>
    <string name="dashboard_my_keys">My Secret Keys</string>
    <string name="dashboard_encrypt">Encrypt</string>
    <string name="dashboard_decrypt">Decrypt</string>
    <string name="dashboard_help">Help</string>
    <string name="dashboard_import_keys">Import Keys</string>
    <string name="key_view_action_encrypt">Encrypt to this contact</string>
</resources>