<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 Thialfihar <thi@thialfihar.org>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <org.sufficientlysecure.keychain.ui.widget.DashboardLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/dashboard_manage_keys"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_manage_keys"
            android:onClick="manageKeysOnClick"
            android:text="@string/dashboard_manage_keys" />

        <Button
            android:id="@+id/dashboard_my_keys"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_my_keys"
            android:onClick="myKeysOnClick"
            android:text="@string/dashboard_my_keys" />

        <Button
            android:id="@+id/dashboard_encrypt"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_encrypt"
            android:onClick="encryptOnClick"
            android:text="@string/dashboard_encrypt" />

        <Button
            android:id="@+id/dashboard_decrypt"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_decrypt"
            android:onClick="decryptOnClick"
            android:text="@string/dashboard_decrypt" />

        <Button
            android:id="@+id/dashboard_scan_qrcode"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_import"
            android:onClick="scanQrcodeOnClick"
            android:text="@string/dashboard_import_keys" />

        <Button
            android:id="@+id/dashboard_help"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/dashboard_help"
            android:onClick="helpOnClick"
            android:text="@string/dashboard_help" />
    </org.sufficientlysecure.keychain.ui.widget.DashboardLayout>

</LinearLayout>