<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 Thialfihar <thi@thialfihar.org>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<org.sufficientlysecure.keychain.ui.widget.KeyEditor xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:id="@+id/label_keyId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_key_id" />

                <TextView
                    android:id="@+id/keyId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="00000000 00000000"
                    android:typeface="monospace" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_algorithm" />

                <TextView
                    android:id="@+id/algorithm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="Name" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_creation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_creation" />

                <TextView
                    android:id="@+id/creation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_expiry" />

                <Button
                    android:id="@+id/expiry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_usage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/label_usage" />

                <Spinner
                    android:id="@+id/usage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/delete"
            style="@style/MinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

</org.sufficientlysecure.keychain.ui.widget.KeyEditor>